# gcp-investing-bot

./: .gitignore  Makefile  improvements.md  pyproject.toml  requirements.txt
app/adapters/: rate_limiter.py
app/backend/: main.py  schemas.py
app/backend/api/v1/: health.py  positions.py  trades.py
app/bot/: executor.py  strategy.py  trade_engine.py
app/bot/strategies/: dca.py
app/core/: config.py  db.py  logger.py  models.py  repository.py  secret_manager.py  utils.py
app/providers/: base.py  binance_provider.py  ccxt_provider.py  provider_factory.py
app/tests/: conftest.py  test_models.py  test_provider_mock.py
deploy/: README.md  cleanup.sh  config.sh  setup_resources.sh  vm_create.sh  vm_provision.sh  vm_provision2.sh  vm_provision_v2.sh  vm_startup.sh
docs/: llm-overview.md
