[project]
name = "gcp-investing-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "ccxt>=4.5.26",
    "fastapi>=0.124.0",
    "google-cloud-secret-manager>=2.25.0",
    "google-cloud-storage>=3.7.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
]
